# bitshares-core-refreshed

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.txt  Dockerfile  README.md  docker-compose.yml
docs/: 404.html  (+2 more)
docs/gen-docs01/: convert-rst.sh  convert_page.py  hello.py  pyproject.toml
docs/gen-docs01/docs/: mkdocs.yml
docs/gen-docs01/docs/docs/: .nav.yml  index.md
docs/gen-docs01/docs/docs/doc.bitshares/: README.md  index.md
docs/gen-docs01/docs/docs/doc.bitshares/bts_holders/: bts_governance.md  community_members.md  dex.md  dex_margin_mechanics.md  dex_short.md  dex_trading.md  index.md  investor_guide.md  migrating_bitshares20.md  things_to_know.md  tokens.md
docs/gen-docs01/docs/docs/doc.bitshares/images/: index.md
docs/gen-docs01/docs/docs/doc.bitshares/resources/: bts-glossary.md  index.md  info_comunities.md  info_external.md
docs/gen-docs01/docs/docs/doc.bitshares/technology/: bitshares_features.md  difference_bitshares.md  dpos.md  graphene.md  history_bitshares.md  how_contribute.md  index.md  what_bitshares.md
docs/gen-docs01/docs/docs/doc.bitshares/user_guide/: backup_local_wallet.md  bitshares-client.md  bridge_gateway.md  create_account.md  dex_exchange_ui.md  fund_account.md  index.md  ledger_nano.md
docs/gen-docs01/docs/docs/docs/: index.md
docs/gen-docs01/docs/docs/docs/architecture/: index.md
docs/gen-docs01/docs/docs/docs/contributing/: index.md
docs/gen-docs01/docs/docs/docs/dev/: index.md
docs/gen-docs01/docs/docs/docs/draft-license/: index.md
docs/gen-docs01/docs/docs/docs/integration/: Monitoring-accounts.md  index.md
(+213 files in other folders)
