[project]
name = "gen-docs01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "lxml>=5.3.1",
    "markdownify>=0.14.1",
    "mkdocs>=1.6.1",
    "mkdocs-autolinks-plugin>=0.7.1",
    "mkdocs-autorefs>=1.3.1",
    "mkdocs-awesome-nav>=3.0.0",
    "mkdocs-ezlinks-plugin>=0.1.14",
    "mkdocs-material>=9.6.4",
    "requests>=2.32.3",
]
